--- a/client/src/app/components/movies/list-movies/list-movies.component.html
+++ b/client/src/app/components/movies/list-movies/list-movies.component.html
@@ -1,40 +1,12 @@
 <div class="row row-cols-1 row-cols-md-4 my-card">
-    <div class="col mb-4">
-      <div class="card h-100">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
+  <div class="col mb-4" *ngFor = "let movie of movies">
+    <div class="card h-100">
+      <img src="{{movie.title}}" class="card-img-top" onerror="this.style.display='none'" alt="Not image yet">
+      <div class="card-body">
+        <h5 class="card-title">{{movie.title}}</h5>
+        <p class="card-text">Score: {{movie.score}}</p>
       </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card h-100">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a short card.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card h-100">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-              This is a longer card with supporting text below as a natural lead-in to additional
-            content. </p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card h-100">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Image_created_with_a_mobile_phone.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
+      <a href="#" class="stretched-link"></a>
   </div>
+</div>
+</div>
