--- a/client/src/app/components/header/navbar/navbar.component.html
+++ b/client/src/app/components/header/navbar/navbar.component.html
@@ -1,9 +1,6 @@
 <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand logo" href="#">MovieScore</a>
-    
-         
-        <form class="form-inline my-2 my-lg-0 ml-auto">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        </form>
-
+    <a class="navbar-brand logo" routerLink="/home">MovieScore</a>        
+    <form class="form-inline my-2 my-lg-0 ml-auto">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    </form>
 </nav>
