--- a/client/src/app/components/movies/find-movie/find-movie.component.html
+++ b/client/src/app/components/movies/find-movie/find-movie.component.html
@@ -6,8 +6,8 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">{{movie.title}}</h5>
-                <p class="card-text">Score: {{movie.score}}</p>
-                <app-form-score></app-form-score>
+                <p class="card-text">Score: {{score}}</p>
+                <app-form-score [childMessage]="movie"></app-form-score>
                 <p class="card-text">{{movie.description}}</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
