--- a/client/src/app/components/movies/form-score/form-score.component.html
+++ b/client/src/app/components/movies/form-score/form-score.component.html
@@ -1,15 +1,16 @@
 <form>
     <p class="clasificacion">
-        <input id="radio1" type="radio" name="estrellas" value="5">
+        <button type="button" class="btn btn-warning score" (click)="vote()">Vote</button>
+        <input id="radio1" type="radio" name="estrellas" value=5 [(ngModel)]="score">
         <label for="radio1">★</label>
-        <input id="radio2" type="radio" name="estrellas" value="4">
+        <input id="radio2" type="radio" name="estrellas" value=4 [(ngModel)]="score">
         <label for="radio2">★</label>
-        <input id="radio3" type="radio" name="estrellas" value="3">
+        <input id="radio3" type="radio" name="estrellas" value=3 [(ngModel)]="score">
         <label for="radio3">★</label>
-        <input id="radio4" type="radio" name="estrellas" value="2">
+        <input id="radio4" type="radio" name="estrellas" value=2 [(ngModel)]="score">
         <label for="radio4">★</label>
-        <input id="radio5" type="radio" name="estrellas" value="1">
-        <label for="radio5">★</label>
-         :racifilaC
+        <input class="score" id="radio5" type="radio" name="estrellas" value=1 [(ngModel)]="score"> 
+        <label class="score" for="radio5">★</label>
+         :etoV
     </p>
 </form>
