--- a/client/src/app/components/movies/list-movies/list-movies.component.html
+++ b/client/src/app/components/movies/list-movies/list-movies.component.html
@@ -1,3 +1,4 @@
+<h1>Movies</h1>
 <div class="row row-cols-1 row-cols-md-6 my-card">
   <div class="col mb-4" *ngFor = "let movie of movies">
     <div class="card h-100">
@@ -10,3 +11,4 @@
     </div>
   </div>
 </div>
+<app-list-all-actors></app-list-all-actors>
