--- a/client/src/app/components/movies/form-score/form-score.component.html
+++ b/client/src/app/components/movies/form-score/form-score.component.html
@@ -1,16 +1,26 @@
 <form>
     <p class="clasificacion">
         <button type="button" class="btn btn-warning score" (click)="vote()">Vote</button>
-        <input id="radio1" type="radio" name="estrellas" value=5 [(ngModel)]="score">
+        <input id="radio1" type="radio" name="estrellas" value=10 [(ngModel)]="score">
         <label for="radio1">★</label>
-        <input id="radio2" type="radio" name="estrellas" value=4 [(ngModel)]="score">
+        <input id="radio2" type="radio" name="estrellas" value=9 [(ngModel)]="score">
         <label for="radio2">★</label>
-        <input id="radio3" type="radio" name="estrellas" value=3 [(ngModel)]="score">
+        <input id="radio3" type="radio" name="estrellas" value=8 [(ngModel)]="score">
         <label for="radio3">★</label>
-        <input id="radio4" type="radio" name="estrellas" value=2 [(ngModel)]="score">
+        <input id="radio4" type="radio" name="estrellas" value=7 [(ngModel)]="score">
         <label for="radio4">★</label>
-        <input class="score" id="radio5" type="radio" name="estrellas" value=1 [(ngModel)]="score"> 
-        <label class="score" for="radio5">★</label>
+        <input id="radio5" type="radio" name="estrellas" value=6 [(ngModel)]="score">
+        <label for="radio5">★</label>
+        <input id="radio6" type="radio" name="estrellas" value=5 [(ngModel)]="score">
+        <label for="radio6">★</label>
+        <input id="radio7" type="radio" name="estrellas" value=4 [(ngModel)]="score">
+        <label for="radio7">★</label>
+        <input id="radio8" type="radio" name="estrellas" value=3 [(ngModel)]="score">
+        <label for="radio8">★</label>
+        <input id="radio9" type="radio" name="estrellas" value=2 [(ngModel)]="score">
+        <label for="radio9">★</label>
+        <input class="score" id="radio10" type="radio" name="estrellas" value=1 [(ngModel)]="score"> 
+        <label class="score" for="radio10">★</label>
          :etoV
     </p>
 </form>
