--- a/client/src/app/components/header/navbar/navbar.component.html
+++ b/client/src/app/components/header/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand logo" routerLink="/home">MovieScore</a>        
     <form class="form-inline my-2 my-lg-0 ml-auto">
+        <button type="button" class="btn btn-warning mr-sm-2" data-toggle="modal" data-target="#exampleModalCenter">Add Movie</button>
+        <app-add-movie-modal></app-add-movie-modal>
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     </form>
 </nav>
