--- a/client/src/app/components/header/add-movie-modal/add-movie-modal.component.html
+++ b/client/src/app/components/header/add-movie-modal/add-movie-modal.component.html
@@ -11,25 +11,22 @@
                 <form>
                     <div class="form-group">
                         <label class="rightTitle" for="exampleFormControlInput1">Title</label>
-                        <input type="text" class="form-control separar" id="exampleFormControlInput1">
+                        <input type="text" class="form-control separar" id="exampleFormControlInput1" name="title" [(ngModel)]="movie.title">
                     </div>
                     <div class="form-group">
                         <label class="rightImage" for="exampleFormControlInput1">Imagen</label>
-                        <input type="text" class="form-control separar" id="exampleFormControlInput1">
-                        <img class="card-img-top" src="" fallimg/>
+                        <input type="text" class="form-control separar" id="exampleFormControlInput1" name="image" [(ngModel)]="movie.image">
+                        <img class="card-img-top" [src]="movie.image" fallimg/>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Description</label>
-                        <textarea class="form-control separar" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="form-group">
-                        
+                        <textarea class="form-control separar" id="exampleFormControlTextarea1" rows="3" name="description" [(ngModel)]="movie.description"></textarea>
                     </div>
                 </form>
             </div>
             <div class="modal-footer modalColor text-white">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-warning">Create Movie</button>
+                <button type="button" class="btn btn-warning" (click)="insertMovie()">Create Movie</button>
             </div>
         </div>
     </div>
