--- a/client/src/app/components/actors/list-actors/list-actors.component.html
+++ b/client/src/app/components/actors/list-actors/list-actors.component.html
@@ -1,3 +1,4 @@
+<h1>Cast</h1>
 <div class="row row-cols-1 row-cols-md-6 my-card">
   <div class="col mb-4" *ngFor = "let actor of actors">
     <div class="card h-100">
